--- a/README.Rmd
+++ b/README.Rmd
@@ -1,10 +1,5 @@
 ---
-title: "lourdR : Présentation de données pondérées"
-output: rmarkdown::html_vignette
-vignette: >
-  %\VignetteIndexEntry{comment-utiliser-mon-package}
-  %\VignetteEngine{knitr::rmarkdown}
-  %\VignetteEncoding{UTF-8}
+output: github_document
 ---
 
 ```{r, include = FALSE}
